convert terminals to an extension app

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,10 @@ test =
 [options.packages.find]
 exclude = ['docs*']
 
+[options.data_files]
+etc/jupyter/jupyter_server_config.d =
+    jupyter-config/jupyter_server_terminals.json
+
 [flake8]
 ignore = E, C, W, F403, F811, F841, E402, I100, I101, D400
 builtins = c, get_config
