--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = jupyter_server_terminals
-version = attr: jupyter_server_terminals.__version__
+version = attr: jupyter_server_terminals._version.__version__
 description = A Jupyter Server Extension Providing Terminals.
 long_description = file: README.md
 long_description_content_type = text/markdown
