--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Base Setup
         uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
+      - name: Point at Jupyter Server branch with terminals removed.
+        run: |
+          pip install -U git+https://github.com/Zsailer/jupyter_server.git@jupyter_server_terminals
       - name: Install the Python dependencies
         run: |
           pip install -e ".[test]" codecov
